Top escrow accounts ratio
